@@ -13,8 +13,8 @@ disable_sss=false
 # disable menu and start game directly
 disable_menu=false
 
-# maximum number of active sounds (original engine sets to 10 if a slow CPU or low memory is detected)
-max_active_sounds=16
+# maximum number of active sounds (original is 16)
+max_active_sounds=-1
 
 # default difficulty when bypassing menu (2:easy 1:normal 0:hard)
 difficulty=1
