@@ -1,4 +1,5 @@
 * release 0.2.9c
+	- added original sound limiter (16 channels)
 	- fixed some bounding box checks
 
 * release 0.2.9b
